--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -1,3 +1,8 @@
 .App {
   text-align: center;
-}
+  font-family: 'Quicksand', sans-serif;
+  color: #ffffff;
+  margin-top: 70px;
+ }
+
+ a{color: #ffffff;}
