--- a/src/Components/Form/Form.css
+++ b/src/Components/Form/Form.css
@@ -20,6 +20,11 @@ form a {
 .add-remove a {
     color: black;
     background-color: white;
+    border-radius: 50%;
+    font-size: 22px;
+    display: inline-block;
+    width: 22px;
+    padding-top: 5px;
 }
 
 .add-remove a:hover {
