--- a/src/Components/Form/Form.css
+++ b/src/Components/Form/Form.css
@@ -11,6 +11,7 @@ form a {
     border-radius: 5px;
     text-decoration: none;
     text-transform: uppercase;
+    font-size: 22px;
 }
 
 .add-remove {
@@ -32,10 +33,12 @@ form a {
 }
 
 #submit {
-    background-color: black;
+    background-image: linear-gradient(190deg, rgba(199,21,133,1) 0%, rgba(151,20,113,1) 100%);
     color: white;
+    padding: 10px 18px;
+    letter-spacing: 0.1px;
 }
 
 #submit:hover {
-    background-color: #404040;
+    background-image: linear-gradient(190deg, rgba(217,43,152,1) 0%, rgba(199,21,133,1) 100%);
 }
