--- a/src/Components/Form/Form.css
+++ b/src/Components/Form/Form.css
@@ -26,10 +26,25 @@ form a {
     display: inline-block;
     width: 22px;
     padding-top: 5px;
+    transition: 0.30s;
+    -webkit-transition: 0.30s;
+    -moz-transition: 0.30s;
+    -ms-transition: 0.30s;
+    -o-transition: 0.30s;
 }
 
 .add-remove a:hover {
     background-color: #f0f0f0;
+    transition: 0.30s;
+  -webkit-transition: 0.30s;
+  -moz-transition: 0.30s;
+  -ms-transition: 0.30s;
+  -o-transition: 0.30s;
+  -webkit-transform: scale(1.05);
+  -moz-transform: scale(1.05);
+  -o-transform: scale(1.05);
+  -ms-transform: scale(1.05);
+  transform: scale(1.05);
 }
 
 #submit {
@@ -37,8 +52,24 @@ form a {
     color: white;
     padding: 10px 18px;
     letter-spacing: 0.1px;
+    transition: 0.30s;
+    -webkit-transition: 0.30s;
+    -moz-transition: 0.30s;
+    -ms-transition: 0.30s;
+    -o-transition: 0.30s;
+    
 }
 
 #submit:hover {
     background-image: linear-gradient(190deg, rgba(217,43,152,1) 0%, rgba(199,21,133,1) 100%);
+    transition: 0.30s;
+    -webkit-transition: 0.30s;
+    -moz-transition: 0.30s;
+    -ms-transition: 0.30s;
+    -o-transition: 0.30s;
+    -webkit-transform: scale(1.02);
+    -moz-transform: scale(1.02);
+    -o-transform: scale(1.02);
+    -ms-transform: scale(1.02);
+    transform: scale(1.02);
 }
