--- a/src/Components/Form/Form.css
+++ b/src/Components/Form/Form.css
@@ -51,13 +51,13 @@ form a {
     background-image: linear-gradient(190deg, rgba(199,21,133,1) 0%, rgba(151,20,113,1) 100%);
     color: white;
     padding: 10px 18px;
+    font-size: calc(12px + 0.5vmin);
     letter-spacing: 0.1px;
     transition: 0.30s;
     -webkit-transition: 0.30s;
     -moz-transition: 0.30s;
     -ms-transition: 0.30s;
     -o-transition: 0.30s;
-    
 }
 
 #submit:hover {
