--- a/src/Components/Form/Form.css
+++ b/src/Components/Form/Form.css
@@ -8,10 +8,6 @@ form span {
     margin: 10px;
     padding: 10px;
     border: 1px solid black;
-    border-radius: 5px;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 22px;
 }
 
 .add-remove {
@@ -50,8 +46,11 @@ form span {
 #submit {
     background-image: linear-gradient(190deg, rgba(199,21,133,1) 0%, rgba(151,20,113,1) 100%);
     color: white;
+    border-radius: 5px;
     padding: 10px 18px;
-    font-size: calc(12px + 0.5vmin);
+    border: none;
+    text-transform: uppercase;
+    font-size: 22px;
     letter-spacing: 0.1px;
     transition: 0.30s;
     -webkit-transition: 0.30s;
