--- a/src/Components/Form/Form.css
+++ b/src/Components/Form/Form.css
@@ -45,13 +45,14 @@ form span {
 
 #submit {
     background-image: linear-gradient(190deg, rgba(199,21,133,1) 0%, rgba(151,20,113,1) 100%);
+    font-family: 'Quicksand', sans-serif;
     color: white;
     border-radius: 5px;
     padding: 10px 18px;
     border: none;
     text-transform: uppercase;
     font-size: 22px;
-    letter-spacing: 0.1px;
+    letter-spacing: 0.05em;
     transition: 0.30s;
     -webkit-transition: 0.30s;
     -moz-transition: 0.30s;
