--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -2,7 +2,7 @@
   text-align: center;
   font-family: 'Quicksand', sans-serif;
   color: #ffffff;
-  margin-top: 70px;
+  padding-top: 70px;
  }
 
  a{color: #ffffff;}
