--- a/src/Components/Results/Results.css
+++ b/src/Components/Results/Results.css
@@ -1,9 +1,42 @@
 h2 {
-text-transform: uppercase;
+    text-transform: uppercase;
     font-size: 3em;
-    margin-top: 10px;
-    line-height: 0px;}
+    line-height: 0px;
+}
 
-    .Title{
-        text-transform:capitalize;
-    }
+.Title {
+    display: inline-block;
+    text-transform: capitalize;
+    background-color: white;
+    color: black;
+    padding: 20px;
+    border-radius: 5px;
+    width: 90%;
+    max-width: 500px;
+    font-size: calc(12px + 2vw);
+    margin: 20px auto;
+}
+
+.secondary-btn {
+    display: inline-block;
+    margin: 10px;
+    background-color: none;
+    border-radius: 5px;
+    padding: 10px 18px;
+    border: 1px solid white;
+    color: white;
+    text-transform: uppercase;
+    font-size: 22px;
+    letter-spacing: 0.05em;
+    transition: all 0.30s;
+    -webkit-transition: 0.30s;
+    -moz-transition: 0.30s;
+    -ms-transition: 0.30s;
+    -o-transition: 0.30s;
+}
+
+.secondary-btn:hover {
+    cursor: pointer;
+    border: none;
+    background-image: linear-gradient(190deg, rgba(217,43,152,1) 0%, rgba(199,21,133,1) 100%);
+}
